--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.3 || ^8.0",
-        "codeigniter4/framework": "^4"
+        "codeigniter4/framework": "^4",
+        "codeigniter4/translations": "^4.1",
+        "myth/auth": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
